Fix port issues
Took 16 minutes