@@ -65,7 +65,7 @@ public class ConfigUpdater
             // Update magma block temperature
             replaceConfigSetting(WorldSettingsConfig.BLOCK_TEMPERATURES, "minecraft:magma_block", blockTemp -> {
                 blockTemp.clear();
-                blockTemp.addAll(List.of("minecraft:magma_block", 0.25, 3, 1.0));
+                blockTemp.addAll(Arrays.asList("minecraft:magma_block", 0.25, 3, 1.0));
             });
 
             // Update ice fuel value
